style.css
body
{
  margin:0;
}

img{
  width:100%;
  height:auto;
  align-self:center;
}

p{
  font-family: 'Open Sans', sans-serif;
  font-size:14px;
}

h1{
  font-family: 'Open Sans', sans-serif;
  font-size:30px;
  margin:0;
}

#bg-main{
  top:0;
  bottom:0;
  left:0;
  right:0;
  position:fixed;
  opacity:0.2;
  background-image:url("images/bg.png");
  min-height: 100%;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center center;
  z-index:-1;
}

#main{
  margin-left: 12%;
  margin-right:12%;
  height:100%;
  top:0;
  z-index:9999;
}

#header{
  margin:15px;
  font-family: 'Covered By Your Grace', cursive;
  font-size:70px;
  color:#0a0a0a;
}

.paw{
  display:inline-block;
  width:60px;
  height:60px;
  margin-top:15px;
  margin-left:-20px;
}

.b-wrapper{
  display:flex;
  justify-content: space-between;
  width:100%;
  flex-wrap:wrap;
}

.box{
  min-width:350px;
  height:auto;
  border: 1px solid black;
  flex:1;
  margin:15px;
  overflow:hidden;
  display:flex;
  position:relative;
}

.box:hover .overlay{
	visibility:visible;
	opacity:0.7;
}

.overlay{
  position:absolute;
  left:0;
  right:0;
  top:0;
  bottom:0;
	background-color:#bddbc9;
	color: #0a0a0a;
	font-family: 'Shadows Into Light', cursive;
	font-size: 25px;
	visibility:hidden;
	opacity:0;
	transition: opacity .2s, visibility .2s;
	display:flex;
	justify-content:center;
	align-items:center;
  height:auto;
}

.imgHolder{
  display:flex;
  align-item:center;
  height:auto;
}

.blog-post{
  padding:25px;
  background: rgba(255, 255, 255, .7);
  text-align:justify;
}

.date{
  font-family: 'Open Sans', sans-serif;
  font-size:12px;
  margin:0;
  padding:0;
}

@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
  #main{
    margin-left:6%;
    margin-right:6%;
  }
  p{
    font-size:24px;
  }
  h1{
    font-size:40px;
  }
  date{
    font-size:20px;
  }
}

